# EZLift

./: .gitignore  README.md  best_full_integer_quant_edgetpu (2).tflite  dataset.py  env.yaml  makefile  pyproject.toml  tflite_runtime-2.17.1-cp311-cp311-linux_aarch64.whl  trainer.py  yolov8n_full_integer_quant_edgetpu.tflite
Notebooks/: test_yolo_sort.ipynb
model_training/: README.md  dataset.py  env.txt
model_training/Notebooks/: convert_image_ratio.ipynb  test_dataset.ipynb  test_yolo_sort.ipynb
model_training/runs/detect/box_pallets/: args.yaml
model_training/runs/detect/pallets/: args.yaml  results.csv
model_training/runs/detect/pallets_128/: args.yaml  results.csv
model_training/runs/detect/pallets_256/: args.yaml  results.csv
model_training/runs/detect/pallets_640/: args.yaml  results.csv
model_training/runs/detect/train/: results.csv
model_training/src/: dataset.py  trainer.py
src/arduino/: main.ino  safety.ino
src/raspberry_pi/: 256_edgetpu.tflite  Easy-Lift_en_raspberry-pi_v3_0_0.ppn  camera.py  controls.py  custom_edgetpu.tflite  custom_palletsonly_125epoch_aug_edgetpu.tflite  custom_palletsonly_12epochs.tflite  custom_palletsonly_50epochs.tflite  cv.py  ezlift_en_raspberry-pi_v3_0_0.rhn  main.py  serial.py  test_camera.ipynb  voice.py
src/raspberry_pi/notebooks/: convert_models.ipynb  test_angle_detection.ipynb  test_button_led.ipynb  test_camera.ipynb  test_camera_angle.ipynb  test_camera_yolo.ipynb  test_lift.ipynb  test_microphone.ipynb  test_shelf_detection.ipynb
(+14 files in other folders)
