[project]
name = "ezlift"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "opencv-python (>=4.11.0.86,<5.0.0.0)",
    "vosk (>=0.3.45,<0.4.0)",
    "pyserial (>=3.5,<4.0)",
    "sounddevice (>=0.5.1,<0.6.0)",
    "rpi-gpio (>=0.7.1,<0.8.0)",
    "tflite-runtime (>=2.14.0,<3.0.0)"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
