[project]
name = "ezlift"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.11"

[tool.poetry.dependencies]
python = "3.11.2"
opencv-python = "*"
vosk = "*"
pyserial = "*"
sounddevice = "*"
rpi-gpio = "*"
tflite-runtime = "*"
ultralytics = "*"
numpy = "==1.24.2"
torch = "<=2.5.1"

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
